[tool.poetry]
name = "repl_python3_beta_Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
ffmpeg = "^1.4"
"discord.py" = "^1.7.1"
PyNaCl = "^1.4.0"
pytz = "^2021.1"
python-ffmpeg = "^1.0.11"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
